--- a/review1/package.json
+++ b/review1/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "02-exploring-node",
+  "name": "review1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engineStrict": true,
-  "engines": {
-    "node": "20.10.0",
-    "npm": "10.2.3"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.10.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "querystring": "^0.2.1"
   }
 }
