--- a/review1/package.json
+++ b/review1/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^20.10.0",
     "dotenv": "^16.3.1",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "tsx": "^4.6.0"
   }
 }
