--- a/07-express/package.json
+++ b/07-express/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "tsx --watch src/index.ts"
+    "dev": "tsx --watch src/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,12 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.10.1",
-    "express": "^4.18.2"
+    "@types/supertest": "^2.0.16",
+    "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
