--- a/07-express/package.json
+++ b/07-express/package.json
@@ -24,6 +24,7 @@
     "@types/supertest": "^2.0.16",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "mongoose": "^8.0.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   }
